# upstash-redis-local

./: .env  Dockerfile  README.md  compose.yml  pyproject.toml  setup.py
src/upstash_redis_local/: __main__.py  main.py
