[project]
name = "upstash-redis-local"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tdcaot", email = "cao@sohobb.jp" }
]
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "redis>=5.2.1",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"upstash-redis-local" = "upstash_redis_local:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "cython>=3.0.11",
    "pip>=25.0.1",
    "setuptools>=75.8.0",
    "wheel>=0.45.1",
    "isort>=6.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/upstash_redis_local"]
